gobmkida/c0/report_worm
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/report_worm/src/engine/worm.c:2232:10: error: use of undeclared identifier 'off_58C786'
gprintf( off_58C786); 
         ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/report_worm/src/engine/worm.c:2249:10: error: use of undeclared identifier 'off_58C786'
gprintf( off_58C786); 
         ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/report_worm/src/engine/worm.c:2266:10: error: use of undeclared identifier 'off_58C786'
gprintf( off_58C786); 
         ^
/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/report_worm/src/engine/worm.c:2283:10: error: use of undeclared identifier 'off_58C786'
gprintf( off_58C786); 
         ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O0/gobmk-clang-O0/report_worm/src/obj/1/worm.o] Error 1
